# Italia

./: .gitignore  README.md  prova_italia.txt
110/: foglio_ore_gratuito_2020_it.ac2  foglio_ore_lavoro_ridotto_per_coronavirus_2020_Italia_it.ac2
Associazioni/: 10203_doppia_odv_aps.ac2  1xxx_doppia_ets - gruppi.ac2  1xxx_doppia_ets.ac2  2010schema_bilancio_economico_new.xls  2010schema_bilancio_finanziario.xls  2012_SCHEMA_BILANCIO_APS.doc  30_rendiconto_raccolta_fondi_e_relazione.doc  APS piano conti_partita doppia_regione_veneto_GR1.ac2  APS piano conti_partita doppia_regione_veneto_GR1_completo.ac2  APS_doppia.ac2  APS_doppia_con_registrazioni.ac2  README.md  (+42 more)
ImportExtensions/unicredit_import_bank_statement/: CMakeLists.txt  README.md  ch.banana.italia.import.unicredit.csvformat.js  ch.banana.italia.import.unicredit.excelformat.js  ch.banana.italia.import.unicredit.js  ch.banana.italia.import.unicredit.manifest.json  ch.banana.italia.import.unicredit.qrc  ch.banana.italia.import.unicredit.sbaa
ImportExtensions/unicredit_import_bank_statement/test/: ch.banana.italia.import.unicredit.test.js
ImportExtensions/unicredit_import_bank_statement/test/testcases/: csv_unicredit_example_format1_20240403.csv  csv_unicredit_example_format1_20240521.csv  csv_unicredit_example_format2_20250225.csv
ImportExtensions/unicredit_import_bank_statement/test/testexpected/ch.banana.italia.import.unicredit.test/: ch.banana.italia.import.unicredit.test.txt  csv_unicredit_example_format1_20240403.txt  csv_unicredit_example_format1_20240521.txt  csv_unicredit_example_format2_20250225.txt
(+681 files in other folders)
